<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
    android:layout_margin="@dimen/genral_margin"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/nombre_de_archivo"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:layout_weight="2"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/texto_del_archivo"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/texto"
            android:layout_weight="2"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/genral_margin"
        android:layout_marginTop="@dimen/genral_margin"
        >

        <Button
            android:id="@+id/bt_ex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar_externo"
            android:layout_weight="1"
            android:onClick="GrabarEx"
            />

        <Button
            android:id="@+id/bt_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar_interno"
            android:layout_weight="2"/>


    </LinearLayout>


</LinearLayout>